--- a/ChiapasOculto.WPF/Registrarse.xaml
+++ b/ChiapasOculto.WPF/Registrarse.xaml
@@ -45,23 +45,19 @@
                     </StackPanel>
                     <StackPanel Margin="10">
                         <TextBlock Text="Celular" Margin="0,0,0,5"/>
-                        <TextBox Height="35" BorderBrush="#101012" BorderThickness="1" FontSize="16" Background="Transparent" Padding="5"/>
+                        <TextBox x:Name="TxtTelefono"  Height="35" BorderBrush="#101012" BorderThickness="1" FontSize="16" Background="Transparent" Padding="5"/>
                     </StackPanel>
                     <StackPanel Margin="10">
                         <TextBlock Text="Apellidos" Margin="0,0,0,5"/>
-                        <TextBox Height="35" BorderBrush="#101012" BorderThickness="1" FontSize="16" Background="Transparent" Padding="5"/>
-                    </StackPanel>
-                    <StackPanel Margin="10">
-                        <TextBlock Text="Departamento" Margin="0,0,0,5"/>
-                        <TextBox Height="35" BorderBrush="#101012" BorderThickness="1" FontSize="16" Background="Transparent" Padding="5"/>
+                        <TextBox x:Name="TxtApellidos" Height="35" BorderBrush="#101012" BorderThickness="1" FontSize="16" Background="Transparent" Padding="5"/>
                     </StackPanel>
                     <StackPanel Margin="10" Grid.ColumnSpan="2">
                         <TextBlock Text="Correo" Margin="0,0,0,5"/>
-                        <TextBox Height="35" BorderBrush="#101012" BorderThickness="1" FontSize="16" Background="Transparent" Padding="5"/>
+                        <TextBox x:Name="TxtCorreo" Height="35" BorderBrush="#101012" BorderThickness="1" FontSize="16" Background="Transparent" Padding="5"/>
                     </StackPanel>
                     <StackPanel Margin="10">
                         <TextBlock Text="Contraseña" Margin="0,0,0,5"/>
-                        <PasswordBox Height="35" BorderBrush="#101012" BorderThickness="1" FontSize="16" Background="Transparent" Padding="5"/>
+                        <PasswordBox x:Name="TxtContrasena" Height="35" BorderBrush="#101012" BorderThickness="1" FontSize="16" Background="Transparent" Padding="5"/>
                     </StackPanel>
                     <StackPanel Margin="10">
                         <TextBlock Text="Verificar Contraseña" Margin="0,0,0,5"/>
@@ -77,7 +73,7 @@
 
         <!-- Panel Derecho: IMAGEN FONDO LLENA -->
         <Image Grid.Column="1"
-               Source="C:\Users\erick\Downloads\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\c7.jpg"
+               Source="C:\Users\lizet\OneDrive\Documentos\6TO SEMESTRE\SISTEMAS DE INFORMACIÓN\WPF\ChiapasOculto.WPF\Imagenes\c7.jpg"
                Stretch="UniformToFill"
                HorizontalAlignment="Stretch"
                VerticalAlignment="Stretch"
