--- a/ChiapasOculto.WPF/IniciarSesion.xaml
+++ b/ChiapasOculto.WPF/IniciarSesion.xaml
@@ -27,7 +27,7 @@
             <!-- Encabezado -->
             <DockPanel Background="White" LastChildFill="True" Height="100" VerticalAlignment="Top">
                 <!-- Logo -->
-                <Image Source="C:\Users\erick\Downloads\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\logoc.png"
+                <Image Source="Imagenes/logochiapas.png"
                        Height="133" Width="232" Margin="0,-8,0,5" DockPanel.Dock="Left"/>
 
                 <!-- Texto Bienvenido -->
@@ -59,7 +59,7 @@
                 </Grid.RowDefinitions>
 
                 <!-- Imagen de usuario -->
-                <Image Source="C:\Users\erick\Downloads\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png" Width="500" HorizontalAlignment="Center" Grid.Row="0" Margin="0,-80,0,0" Height="250" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+                <Image Source="Imagenes/user.png" Width="500" HorizontalAlignment="Center" Grid.Row="0" Margin="0,-80,0,0" Height="250" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
                     <Image.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -106,7 +106,7 @@
 
         <!-- PANEL DERECHO: IMAGEN -->
         <Grid Grid.Column="1">
-            <Image Source="C:\Users\erick\Downloads\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\CCPAQUETE.jpg"
+            <Image Source="Imagenes/CCPAQUETE.jpg"
                    Stretch="Fill"
                    HorizontalAlignment="Stretch"
                    VerticalAlignment="Stretch"/>
