--- a/ChiapasOculto.WPF/OperadoraDatos.xaml
+++ b/ChiapasOculto.WPF/OperadoraDatos.xaml
@@ -10,7 +10,7 @@
 
         <!-- IMAGEN DERECHA DE FONDO TOTAL SIN ESPACIOS -->
         <Grid Grid.Column="1">
-            <Image Source="C:\Users\lizet\OneDrive\Documentos\6TO SEMESTRE\SISTEMAS DE INFORMACIÓN\WPF\ChiapasOculto.WPF\Imagenes\parque_berriozabal (1).png"
+            <Image Source="Imagenes/parque_berriozabal (1).png"
                    Stretch="UniformToFill" Margin="-66,0,-65,0" RenderTransformOrigin="0.528,0.507"/>
         </Grid>
 
@@ -23,7 +23,7 @@
 
             <!-- HEADER -->
             <DockPanel Background="White" Height="100">
-                <Image Source="C:\Users\lizet\OneDrive\Documentos\6TO SEMESTRE\SISTEMAS DE INFORMACIÓN\WPF\ChiapasOculto.WPF\Imagenes\logoc.png" Height="133" Width="232" Margin="0,-8,0,5" DockPanel.Dock="Left"/>
+                <Image Source="Imagenes/logochiapas.png" Height="133" Width="232" Margin="0,-8,0,5" DockPanel.Dock="Left"/>
                 <StackPanel VerticalAlignment="Center">
                     <TextBlock Text="BIENVENID@" FontWeight="Bold" FontSize="20"/>
                     <TextBlock Foreground="Red" FontWeight="Bold" FontSize="14">(Nombre)</TextBlock>
