--- a/ChiapasOculto.WPF/Modificar_Eliminar.xaml
+++ b/ChiapasOculto.WPF/Modificar_Eliminar.xaml
@@ -2,7 +2,7 @@
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:sys="clr-namespace:System;assembly=mscorlib"
-         Title="Formato Condicional" Height="600" Width="1000" Background="#E8FFCC"
+         Title="Formato Condicional" Height="649" Width="1000" Background="#E8FFCC"
          WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Grid>
         <!-- Dividimos en dos filas: Header y Contenido -->
@@ -18,12 +18,12 @@
             <Image Source="Imagenes/logochiapas.png" 
            Height="141" Width="214" Margin="10,0" DockPanel.Dock="Left"/>
             <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="BIENVENID@" FontWeight="Bold" FontSize="20"/>
-                <TextBlock Foreground="Red" FontWeight="Bold" FontSize="14">(Nombre)</TextBlock>
+                <TextBlock Text="BIENVENIDO ADMINISTRADOR" FontWeight="Bold" FontSize="20"/>
+                <TextBlock x:Name="Identificador" Foreground="Red" FontWeight="Bold" FontSize="14">(Nombre)</TextBlock>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0" DockPanel.Dock="Right">
-                <Label Content="INICIO" Margin="15,0" FontWeight="Bold" VerticalAlignment="Center"/>
-                <Label Content="CERRAR SESIÓN" Margin="15,0" FontWeight="Bold" VerticalAlignment="Center"/>
+                <Label x:Name="Inicio" Content="INICIO" Margin="15,0" FontWeight="Bold" VerticalAlignment="Center" MouseDoubleClick="Inicio_MouseDoubleClick"/>
+                <Label x:Name="CerrarSesion" Content="CERRAR SESIÓN" Margin="15,0" FontWeight="Bold" VerticalAlignment="Center" MouseDoubleClick="Label_MouseDoubleClick"/>
             </StackPanel>
         </DockPanel>
 
@@ -37,10 +37,10 @@
             <!-- PANEL IZQUIERDO -->
             <StackPanel Grid.Column="0" Margin="20">
                 <TextBlock Text="Lista de Operadoras" FontFamily="Cooper Black" FontSize="22" FontWeight="Bold" Foreground="Black" Margin="0,0,0,10"/>
-                <DataGrid x:Name="dgProductos" AutoGenerateColumns="False" FontSize="15" Height="500"
-                  AlternatingRowBackground="#E6F2FF" HeadersVisibility="Column" CanUserAddRows="False" >
+                <DataGrid x:Name="datosOperadora" AutoGenerateColumns="True" FontSize="15" Height="500"
+                  AlternatingRowBackground="#E6F2FF" HeadersVisibility="Column" CanUserAddRows="False" SelectionChanged="datosOperadora_SelectionChanged" >
                     <DataGrid.Columns>
-
+                        
                     </DataGrid.Columns>
                 </DataGrid>
             </StackPanel>
@@ -51,25 +51,27 @@
                     <TextBlock Text="Datos de Operadora" FontFamily="Cooper Black"  Foreground="Black" FontSize="20" FontWeight="Bold" Margin="0,0,0,20"/>
 
                     <TextBlock Text="Nombre de Operadora:" Foreground="Black"/>
-                    <TextBox Height="30" Margin="0,0,0,10"/>
+                    <TextBox x:Name="txtNombre" Height="30" Margin="0,0,0,10" IsEnabled="False"/>
 
                     <TextBlock Text="Correo Electrónico:" Foreground="Black"/>
-                    <TextBox Height="30" Margin="0,0,0,10"/>
+                    <TextBox x:Name="txtCorreo" Height="30" Margin="0,0,0,10" IsEnabled="False"/>
 
                     <TextBlock Text="Contraseña:" Foreground="Black"/>
-                    <TextBox Height="30" Margin="0,0,0,10"/>
+                    <TextBox x:Name="txtContrasena" Height="30" Margin="0,0,0,10" IsEnabled="False"/>
 
                     <TextBlock Text="Teléfono:" Foreground="Black"/>
-                    <TextBox Height="30" Margin="0,0,0,10"/>
+                    <TextBox x:Name="txtTelefono" Height="30" Margin="0,0,0,10" IsEnabled="False"/>
 
                     <TextBlock Text="Dirección:" Foreground="Black"/>
-                    <TextBox Height="30" Margin="0,0,0,20"/>
+                    <TextBox x:Name="txtDireccion" Height="30" Margin="0,0,0,20" IsEnabled="False"/>
 
-                    <Button Content="Guardar" Height="40" Background="#d2e7bb" Foreground="Black" FontWeight="Bold"/>
-                    <Button Content="Modificar" Height="40" Background="#d2e7bb" Foreground="Black" FontWeight="Bold"/>
-                    <Button Content="Eliminar" Height="40" Background="#d2e7bb" Foreground="Black" FontWeight="Bold"/>
+                    <Button Content="Guardar" Height="40" Background="#d2e7bb" Foreground="Black" FontWeight="Bold" Click="Button_Click_1"/>
+                    <Button Content="Modificar" Height="40" Background="#d2e7bb" Foreground="Black" FontWeight="Bold" Click="Button_Click"/>
+                    <Button Content="Eliminar" Height="40" Background="#d2e7bb" Foreground="Black" FontWeight="Bold" Click="Button_Click_2"/>
                 </StackPanel>
             </Border>
+            
         </Grid>
+        
     </Grid>
 </Window>
